2009-11-04  Sam Steingold  <sds@gnu.org>

	* eval.d (interpret_bytecode_): fix a type error in the last patch

2009-11-03  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: create dynamic bindings for all special variables
	* zthread.d (initialize_thread_bindings): initializes symbols per
	thread value cells during thread creation
	(thread_stub): use it
	(MAKE-THREAD): check that :initial-bindings is proper list
	* lispbibl.d (initialize_thread_bindings): declare as global
	* spvw.d (mt_main_actions): use it
	* control.d (make_variable_frame): allocate per thread value cells
	for locally declared special variables (if needed)
	* eval.d (progv, cod_bind): ditto
	* threads.lisp (*DEFAULT-SPECIAL-BINDINGS*): initialize per thread
	bindings with global symbol values

2009-11-01  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-cerror): extract predefun from ...
	(c-error): use it; accept DETAIL as the 1st argument
	(test-list, c-form, test-argument-syntax, c-illegal-syntax)
	(c-analyze-lambdalist, bind-fixed-var-1, bind-movable-var)
	(bind-movable-var, c-DECLARE, c-SETQ, c-PSETQ)
	(c-MULTIPLE-VALUE-SETQ, c-MULTIPLE-VALUE-BIND, check-blockname)
	(c-RETURN-FROM, c-TAGBODY, c-GO, c-FUNCTION, err-syntax)
	(c-SYMBOL-MACROLET, c-EVAL-WHEN, c-COND, c-CASE, c-FUNCALL-INLINE):
	pass DETAIL to C-ERROR
	* condition.lisp (c-cerror): defun here: signal source-program-error

2009-11-01  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-current-location): when returning a non-empty
	value, terminate it with ": "
	(c-warning, c-error): C-CURRENT-LOCATION is either empty or is
	terminated by ": ", so adjust its use
	* condition.lisp (c-warning): ditto; also bind *ERROR-OUTPUT* to
	*C-ERROR-OUTPUT*, never to *C-LISTING-OUTPUT* which may be NIL,
	because *COMPILE-VERBOSE* does not affect condition handling

2009-11-01  Sam Steingold  <sds@gnu.org>

	* error.d (begin_error): ensure *ERROR-OUTPUT* is valid first thing

2009-10-31  Sam Steingold  <sds@gnu.org>
