@@ -1,3 +1,8 @@
+2009-11-05  Vladimir Tzankov  <vtzankov@gmail.com>
+
+	* zthread.d (initialize_thread_bindings): allocate per thread value
+	cell for symbols that do not have one
+
 2009-11-04  Sam Steingold  <sds@gnu.org>
 
 	* eval.d (interpret_bytecode_): fix a type error in the last patch
